syntax = "proto3";

option java_multiple_files = false;
option java_package = "gov.fnal.controls.service.proto.grpc";
option java_outer_classname = "DPMProto";

package dpm;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service DPM {
	rpc OpenSession(google.protobuf.Empty) returns (stream SessionReply) {}
	rpc Authenticate(AuthRequest) returns (AuthReply) {}
    rpc ReadDevice(Device) returns (Reading) {}
    rpc StartAcquisition(AcquisitionList) returns (stream Reading) {}
	rpc ApplySettings(SettingList) returns (StatusList) {}
	rpc GetData(google.protobuf.Timestamp) returns (stream Reading) {}
}

message Result {
	oneof value {
		google.protobuf.Empty none = 1;
		string error = 2;
	}
}

message SessionReply {
	string sessionId = 1;
	string serviceName = 2;
}

message AuthRequest {
	string sessionId = 1;
	bytes token = 2;
}

message AuthReply {
	oneof step {
		bytes token = 1;
		Result result = 2;
	}
}

message Device {
	string sessionId = 1;
    string name = 2;
}

message AcquisitionList {
	string sessionId = 1;
    repeated string req = 2;
}

message Data {
    message ScalarArray {
        repeated double value = 1;
    }

    message TextArray {
        repeated string value = 1;
    }

    message AnalogAlarm {
        double minimum = 1;
        double maximum = 2;
        bool alarmEnable = 3;
        bool alarmStatus = 4;
        bool abort = 5;
        bool abortInhibit = 6;
        uint32 triesNeeded = 7;
        uint32 triesNow = 8;
    }

    message DigitalAlarm {
        sint32 nominal = 1;
        uint32 mask = 2;
        bool alarmEnable = 3;
        bool alarmStatus = 4;
        bool abort = 5;
        bool abortInhibit = 6;
        uint32 triesNeeded = 7;
        uint32 triesNow = 8;
    }

    message BasicStatus {
        map<string, string> value = 1;
    }

    oneof value {
        sint32 status = 1;	// set when a fatal error occurs
        double scalar = 2;
        ScalarArray scalarArr = 3;
        bytes raw = 4;
        string text = 5;
        TextArray textArr = 6;
        AnalogAlarm anaAlarm = 7;
        DigitalAlarm digAlarm = 8;
        BasicStatus basicStatus = 9;
    }
}

message Reading {
    uint64 timestamp = 1;
    uint32 index = 2;
    Data data = 3;
}

message Setting {
	string name = 1;
	Data data = 2;
}

message SettingList {
	string sessionId = 1;
	repeated Setting setting = 2;
	string event = 3;
}

message StatusList {
	repeated sint32 status = 1;
}

